--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h2>My Skills</h2>
         <div class="skills-grid">
             <div class="skill-card">
-                <img src="canva-seeklogo.png'' class="skill-icon" alt="Canva" />
+                <img src="canva-seeklogo.png" class="skill-icon" alt="Canva" />
                 <h4>CANVA</h4>
                 <div class="level-label">51%</div>
             </div>
