--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="hero">
             <div class="hero-left">
                 <p class="tagline">Tax analysts & Experimenting with Android operating systems /</p>
-                <h1>Hi, I am <span>Md moideen </span> <br>I'm currently preparing......... </h1>
+                <h1>Hi, I am <span>Md moideen </span> <br>I'm currently preparing  a tax analysis.</h1>
                 <div class="buttons">
                     <a href="#" class="btn primary">Hire me</a>
                     <a href="MD MOIDEEN _Resume.pdf" class="btn outline" download>Download CV</a>
