--- a/index.html
+++ b/index.html
@@ -220,3 +220,4 @@
 
 </html>
 <a href="https://your-project-link.com" target="_blank">View Project</a>
+<span class="btn disabled">Coming Soon</span>
