--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
                 <div class="project-card">
                     <img src="ONE.png" alt="Project 2" />
                     <div class="project-info">
+                        <a href="#">View Project</a>
                         <h3>customized statusbar</h3>
                         <p>Android </p>
                         <a href="#" target="_blank">View Project</a>
@@ -219,5 +220,3 @@
 </body>
 
 </html>
-<a href="https://your-project-link.com" target="_blank">View Project</a>
-<span class="btn disabled">Coming Soon</span>
