--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
         </footer>
 
     </section>
+    <a href="projects/statusbar/index.html" target="_blank">View Project</a>
+    <a href="#">View Project</a> 
 
 
 
