--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
 
 
-
+9
     <script src="https://unpkg.com/scrollreveal"></script>
     <script>
         ScrollReveal().reveal('.hero-left', { origin: 'left', distance: '50px', duration: 1000, delay: 300 });
@@ -222,3 +222,6 @@
 </body>
 
 </html>
+<a href="projects/statusbar/index.html" target="_blank">View Project</a>
+<a href="#">View Project</a>
+
