--- a/index.html
+++ b/index.html
@@ -172,15 +172,15 @@
                 <h2 class="section-title">Get In Touch</h2>
                 <form class="contact-form">
                     <div class="form-group">
-                        <input type="text" placeholder="Your Name" required />
+                        <input type="text" placeholder="MD MOIDEEN" required />
                     </div>
                     <div class="form-group">
-                        <input type="email" placeholder="Your Email" required />
+                        <input type="email" placeholder="Moideen8733@gmail.com " required />
                     </div>
                     <div class="form-group">
-                        <textarea rows="5" placeholder="Your Message" required></textarea>
+                        <textarea rows="5" placeholder="Scrool down and you get my LinkedIn profile or Instagram " required></textarea>
                     </div>
-                    <button type="submit" class="btn primary">Send Message</button>
+                    <button type="submit" class="btn primary">Look on bottom yo will see logo click on it. </button>
                 </form>
             </div>
         </section>
