--- a/index.html
+++ b/index.html
@@ -172,15 +172,15 @@
                 <h2 class="section-title">Get In Touch</h2>
                 <form class="contact-form">
                     <div class="form-group">
-                        <input type="text" placeholder="MD MOIDEEN" required />
+                        <input type="text" placeholder="My contact no-8002169926" required />
                     </div>
                     <div class="form-group">
-                        <input type="email" placeholder="Moideen8733@gmail.com " required />
+                        <input type="email" placeholder="My Gmail-Moideen8733@gmail.com " required />
                     </div>
                     <div class="form-group">
-                        <textarea rows="5" placeholder="Scrool down and you get my LinkedIn profile or Instagram " required></textarea>
+                        <textarea rows="5" placeholder="Just scroll down to find my LinkedIn or Instagram profile ! " required></textarea>
                     </div>
-                    <button type="submit" class="btn primary">Look on bottom yo will see logo click on it. </button>
+                    <button type="submit" class="btn primary">Kindly look at the bottom; you will find the logo there. Please click on it. </button>
                 </form>
             </div>
         </section>
