--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h1>Hi, I am <span>Md moideen </span> <br>I'm currently preparing  a tax analysis.</h1>
                 <div class="buttons">
                     <a href="#" class="btn primary">Hire me</a>
-                    <a href="MD MOIDEEN _Resume.pdf" class="btn outline" download>Download CV</a>
+                    <a href="Md Moideen resume .pdf" class="btn outline" download>Download CV</a>
                 </div>
             </div>
             <div class="hero-right">
@@ -224,4 +224,5 @@
 </html>
 <a href="projects/statusbar/index.html" target="_blank">View Project</a>
 <a href="#">View Project</a>
+
 
